import files from previous project

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,26 @@
-<h3>2048</h3>
+<div class="container">
+  <div class="heading">
+    <h1>2048</h1>
+    <div class="score-container">
+      <div class="score">0</div>
+      <div class="best">0</div>
+    </div>
+  </div>
+  <div class="above-game">
+    <p class="description">Join the numbers to get
+      <strong>2048 tile!</strong>
+    </p>
+    <a class="new-game">New Game</a>
+  </div>
+  <div class="game-container">
+    <div class="game-message">
+      <p></p>
+      <div>
+        <a class="retry-button">Try again</a>
+      </div>
+    </div>
+    <canvas id="game-board">
+      Your browser doesn't support canvas.
+    </canvas>
+  </div>
+</div>
