--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -19,8 +19,6 @@
         <a class="retry-button">Try again</a>
       </div>
     </div>
-    <canvas id="game-board">
-      Your browser doesn't support canvas.
-    </canvas>
+    <g2048-gameboard></g2048-gameboard>
   </div>
 </div>
